reduced paddings between sections and many mods

--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -41,25 +41,25 @@
 
     <!--================Header Menu Area =================-->
     <header class="header_area">
-		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container box_1620">
-					<!-- Brand and toggle get grouped for better mobile display -->
+        <div class="main_menu">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container box_1620">
+                    <!-- Brand and toggle get grouped for better mobile display -->
 
-					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<!--<li class="nav-item submenu dropdown">
+                    <a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav menu_nav">
+                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+                            <!--<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
@@ -67,16 +67,17 @@
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
 								</ul>
 							</li>-->
-							<li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates</a></li>
-							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
-							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
-							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+                            <li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates</a></li>
+                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
 
-							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-							<!--<li class="nav-item submenu dropdown">
+                            <!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+                            <!--<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">Register</a>
 								<ul class="dropdown-menu">
@@ -84,28 +85,28 @@
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
 								</ul>
 							</li>-->
-							<li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
-							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
-							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
-							<!-- <li class="nav-item submenu dropdown">
+                            <!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
 								</ul>
 							</li> -->
-						</ul>
-						<!-- <ul class="nav navbar-nav navbar-right">
+                        </ul>
+                        <!-- <ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul> -->
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
     <!--================Header Menu Area =================-->
 
     <!--================Home Banner Area =================-->
@@ -128,10 +129,13 @@
 
     <!--================Contact Area =================-->
     <div class="container" style="margin:50px auto;">
-
-        <h2>Paper submission guidelines/Call for Papers</h2>
-        <p>Authors are invited to submit full papers for
-            consideration (maximum 10 pages) in SCI 2020.
+        <h2>Call For Papers</h2>
+        <p>
+            Authors are invited to submit full papers for
+            consideration (maximum 10 pages) in SCI 2020. The Conference looks for significant contributions to all major fields of the Computer Science and Information Technology in theoretical and practical aspects. The aim of the conference is to provide a platform to the researchers and practitioners from both academia as well as industry to meet and share cutting-edge development in the field. Authors are solicited to contribute to the conference by submitting articles that illustrate research results, projects, surveying works and industrial experiences that describe significant advances in the following areas, but are not limited to.
+        </p>
+        <h2>Paper submission guidelines</h2>
+        <p>
             Submission of paper must be original and should
             not have been previously published or under consideration
             for publication. All papers will be sent for peer review and the corresponding
@@ -139,11 +143,29 @@
             will be published by Smart Innovation Systems and Technologies Series,
             Springer (Approved). Extended versions of selected best papers will expected to be appear
             in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
-            must register for the conference. All submissions are to be done electronically through easychair link. Submitted papers should neither be previously published nor under consideration for publication elsewhere. All papers will be refereed through a peer review process.</p>
+            must register for the conference. All submissions are to be done electronically through easychair link.<br><br>
+            Before submission, <a href="https://www.springer.com/gp/authors-editors/editors/publishing-ethics-for-journals/4176">click hereto read the Springer publication ethis and guidelines.</a>
+            <br>
+            All submissions must comply with the Springer SIST format: <a href="https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines">https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines</a>
+            <br>
+            <h4>Page limit for Camera Ready papers is 8 pages (With regular registration fees).<br><br>Extra page charge: INR 1500 per page (for Indian authors) and USD 50 per page (for foreign authors).</h4>
+        </p>
+        <br>
+        <h2>Template Download Links</h2>
 
-        <img src="./img/springer-science.png" class="img-fluid" style="width:30%;height:30%;padding:30px; display: block; margin-left: auto; margin-right: auto;" alt="">
+        <a href="ftp://ftp.springernature.com/cs-proceeding/svproc/templates/ProcSci_TeX.zip">LaTeX Template</a><br>
+        <a href="ftp://ftp.springernature.com/cs-proceeding/llncs/word/splnproc1703.zip">Microsoft Wors Template</a><br>
+        <a href="ftp://ftp.springernature.com/cs-proceeding/svproc/guidelines/Springer_Guidelines_for_Authors_of_Proceedings.pdf">Springer Proceedings Guidelines for Authors</a><br>
+
+        <!--Submitted papers should neither be previously published nor under consideration for publication elsewhere.
+            All papers will be refereed through a peer review process.-->
+        <br />
+
+        <img src="./img/springer.png" class="img-fluid"
+            style="width:30%;height:30%;padding:30px; display: block; margin-left: auto; margin-right: auto;" alt="">
         <ul class="list-group list-group-horizontal" style=" display: inline-block;">
-            <li class="list-group-item" style="text-align: center;"><b style="color: black;">Conference Focus Areas</b></li>
+            <li class="list-group-item" style="text-align: center;"><b style="color: black;">Conference Focus Areas</b>
+            </li>
             <div class="row">
                 <div class="col-sm">
                     <li class="list-group-item" style="text-align: center;">Approximate Computing</li>
@@ -162,8 +184,10 @@
                     <li class="list-group-item" style="text-align: center;">Security Tools & Technologies</li>
                     <li class="list-group-item" style="text-align: center;">Stream Mining</li>
                     <li class="list-group-item" style="text-align: center;">Social Media</li>
-                    <li class="list-group-item" style="text-align: center;">Knowledge - based Systems and Formal Methods</li>
-                    <li class="list-group-item" style="text-align: center;">Search Engines and Information Retrieval</li>
+                    <li class="list-group-item" style="text-align: center;">Knowledge - based Systems and Formal Methods
+                    </li>
+                    <li class="list-group-item" style="text-align: center;">Search Engines and Information Retrieval
+                    </li>
                 </div>
                 <div class="col-sm">
                     <li class="list-group-item" style="text-align: center;">Real- time Systems</li>
@@ -173,7 +197,8 @@
                     <li class="list-group-item" style="text-align: center;">Robotics</li>
                     <li class="list-group-item" style="text-align: center;">Robust Control Agents</li>
                     <li class="list-group-item" style="text-align: center;">Big data Tools & Technologies</li>
-                    <li class="list-group-item" style="text-align: center;">Recent Trends & Developments in Networking</li>
+                    <li class="list-group-item" style="text-align: center;">Recent Trends & Developments in Networking
+                    </li>
                 </div>
             </div>
         </ul>
@@ -182,8 +207,8 @@
 
     <!--================ start footer Area  =================-->
     <footer class="footer-area  pad_btm_50 footer-font" height="auto">
-		<div class="container">
-			<!--<div class="row" style="text-align: center; margin:auto;">
+        <div class="container">
+            <!--<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
 				<div class="col-lg-3  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
@@ -232,18 +257,18 @@
 				</div>
 				<div class="col-lg-1"></div>
 			</div>-->
-			<div class="footer-area">
-				<p style="text-align: center; padding-top:45px;" >
-					Organized by, Vasavi College of Engineering (Autonomous), Hyderabad. Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script>.&nbsp; &nbsp;
-					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
-				</p>
-				<!--<div class="footer-social">
+            <div class="footer-area">
+                <p style="text-align: center; padding-top:45px;">
+                    Organized by, Vasavi College of Engineering (Autonomous), Hyderabad. Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>.&nbsp; &nbsp;
+                    <a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
+                </p>
+                <!--<div class="footer-social">
 					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
 				</div>-->
-			</div>
-		</div>
-	</footer>
+            </div>
+        </div>
+    </footer>
     <!--================ End footer Area  =================-->
 
     <!--================Contact Success and Error message Area =================-->
