--- a/about-us.html
+++ b/about-us.html
@@ -146,11 +146,11 @@
 
 			<p class="sample-text">
 				The Department of Computer Science & Engineering was started in the year 1994 offering a 4-year B.E.
-				course with an annual intake of 120 students, M.Tech course with an annual intake of 18 students. We
+				course with an annual intake of 180 students, M.Tech course with an annual intake of 18 students. We
 				have well-qualified & experienced faculty. Department was accredited in the year 2017 by NBA for a
 				period of three years. There has been a steady increase in the number of students placed through campus
-				recruitment in reputed organizations - Adobe, Microsoft, Service Now, Qualcomm, Accolite, Oracle, Pega
-				Systems, JP Morgan, Deloitte, ADP, Infosys, Accenture, etc. Osmania University has identified the
+				recruitment in reputed organizations - Cisco, Microsoft, Service Now, Qualcomm, Accolite, Oracle, Pega
+				Systems, JP Morgan, Deloitte, ADP, TCS, Infosys, Accenture, etc. Osmania University has identified the
 				department as a research center. Two professors in the department are recognized as research supervisors
 				for guiding PhD students.  We also offer value added courses in the form of CISCO Local academy to meet
 				the contemporary market demands. The department has setup IoT Makerspace Lab in association with
