--- a/committees.html
+++ b/committees.html
@@ -455,8 +455,17 @@
             <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        Dr. DVLN Somayajulu
+                    </td>
+                    <td style="padding-right: 170px;"> Professor, NITW</td>
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td >
+                        Dr. R.B.V. Subramaanyam
+                    </td >
+                    <td style="padding-right: 170px;"> Professor, NITW</td>
                 </tr>
             </tbody>
             <br />
@@ -472,7 +481,37 @@
                 </tr>
             </tbody>
         </table>
-
+        <br />
+        <table class="table table-striped">
+            <h2>Website Committee</h2>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>MSV. Sashi Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>S. Vinay Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Harshit Chhabra</td>
+                    <td>Student, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>K.  Abhishek</td>
+                    <td>Student, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>I. Prabhakar</td>
+                    <td>Student, CSED, VCE</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <!--================End Team Area =================-->
 
