--- a/importantdates.html
+++ b/importantdates.html
@@ -128,7 +128,7 @@
 
     <!--================Dates Area =================-->
     <div class="container" style="text-align: center; margin:50px auto;">
-        <h2>Important Dates and Venue</h2>
+        <h2>Important Dates</h2>
         <div class="row justify-content-center">
             <div class="col-auto">
                 <table class="table table-borderless table-responsive table-hover">
@@ -153,7 +153,7 @@
         <!-- <b></b> <br/>
         <b></b> <br/>
         <b>Conference dates:</b> 5th and  6th  June 2020<br/> -->
-        <h3>Venue: QEEE HALL , VCE</h3><br/>
+        <h3>Venue: QEEE HALL , Vasavi College of Engineering(Autonomous), Hyderabad, Telangana, India</h3><br/>
     </div>
 
     <!--================Dates Area =================-->
