--- a/register.html
+++ b/register.html
@@ -280,14 +280,15 @@
                             <p>
                                 <ul class="list">
                                     <li>Bank : Syndicate Bank, VCE</li>
-                                    <li>Acc Name : S. Vinay Kumar</li>
-                                    <li>Acc No : 30592180000910</li>
-                                    <li>IFSC :SYNB0003059</li>
+                                    <li>Acc Name : XXXXXXXXXXX</li>
+                                    <li>Acc No : XXXXXXXXX</li>
+                                    <li>IFSC : XXXXXXXXXX</li>
                                     <li>Address : Vasavi College of Engineering</li>
                                 </ul>
                             </p>
                         </div>
                     </div>
+                    <div class="col-md-4"></div>
                     <div class="col-md-4">
                         <div class="single-defination">
                             <h4 class="mb-20">UPI</h4>
@@ -299,12 +300,12 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <!--<div class="col-md-4">
                         <div class="single-defination">
                             <h4 class="mb-20">Paytm</h4>
                             <p>Payment Mobile no: 9866171252</p>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
