--- a/schedule.html
+++ b/schedule.html
@@ -135,7 +135,7 @@
 					<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
+								<img src="img/springer-science.png" width="58px" height="58px" alt="">
 							</div>
 							<div class="media-body">
 								<h5>TIME</h5>
@@ -145,7 +145,7 @@
 						</div>
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
+								<img src="img/springer-science.png" width="58px" height="58px" alt="">
 							</div>
 							<div class="media-body">
 								<h5>To be updated</h5>
@@ -157,7 +157,7 @@
 					<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
+								<img src="img/springer-science.png" width="58px" height="58px"alt="">
 							</div>
 							<div class="media-body">
 								<h5>TIME</h5>
@@ -167,7 +167,7 @@
 						</div>
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
+								<img src="img/springer-science.png" width="58px" height="58px" alt="">
 							</div>
 							<div class="media-body">
 								<h5>To be updated</h5>
