--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</li>-->
 							<li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
 							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
+							<li class="nav-item"><a class="nav-link" href="./travel.html">Travel</a></li>
 							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
