--- a/accommodation.html
+++ b/accommodation.html
@@ -151,8 +151,8 @@
 	<div class="album py-5 bg-light">
 		<div class="container">
 			<h1>Nearby Hotels</h1><br>
-			<div class="row">
 
+			<div class="row">
 				<div class="col-md-4">
 					<div class="card mb-4 shadow-sm">
 						<a href="https://www.google.com/maps/place/Taramathi+Baradari/@17.3680578,78.3728344,15z/data=!4m11!1m2!2m1!1sHotels!3m7!1s0x3bcb942b94ed9187:0x1429cc92eaa6bf83!5m2!4m1!1i2!8m2!3d17.3787622!4d78.3793053"
@@ -168,6 +168,42 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-md-4">
+					<div class="card mb-4 shadow-sm">
+						<a href="https://www.google.com/maps/place/OYO+33412+Spacious+Stay+Qutub+Shahi+Tomb/@17.395867,78.3809653,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb95bf33c66ab1:0x5ae5670738c30e3e!5m2!4m1!1i2!8m2!3d17.395867!4d78.383154"
+							target="_blank">
+							<img class="card-img-top" src="img/Accomodation/spacious-stay.jpg"
+								alt="OYO 33412 Spacious Stay " width="200" height="200" />
+						</a>
+						<div class="card-body">
+							<p class="card-text">
+								<b style="color:black">Name: </b> OYO 33412 Spacious Stay<br>
+								<b style="color:black">Distance: </b> 3km
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card mb-4 shadow-sm">
+						<a href="661+Aurum+Abode/@17.400317,78.3856733,17z/data=!4m8!3m7!1s0x3bcb96a1b8ebb985:0xacb0c590f34d987f!5m2!4m1!1i2!8m2!3d17.400317!4d78.387862"
+							target="_blank">
+							<img class="card-img-top" src="img/Accomodation/arum-abode.jpg" width="200" height="200"
+								alt="ArumAbode" />
+						</a>
+						<div class="card-body">
+							<p class="card-text">
+								<b style="color:black">Name: </b> OYO 6661 Arum Abode<br>
+								<b style="color:black">Distance: </b> 4km
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="row">
+
+				
 				<div class="col-md-4">
 					<div class="card mb-4 shadow-sm">
 						<a href="https://www.google.com/maps/place/The+Golkonda+Hotel/@17.4045089,78.451524,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb97406a8572c3:0xa02e681b1a4add23!5m2!4m1!1i2!8m2!3d17.4045089!4d78.4537127"
@@ -195,6 +231,22 @@
 							<p class="card-text">
 								<b style="color:black">Name: </b> Park Continental<br>
 								<b style="color:black">Distance: </b> 11km
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="card mb-4 shadow-sm">
+						<a href="https://www.google.com/maps/place/OYO+7495+Manikonda/@17.417558,78.3817013,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb9401e0c9f519:0x5aec48c18123c386!5m2!4m1!1i2!8m2!3d17.417558!4d78.38389"
+							target="_blank">
+							<img class="card-img-top" src="img/Accomodation/oyo 7495.jpg"
+								alt="OYO 7495 Manikonda" width="200" height="200" />
+						</a>
+						<div class="card-body">
+							<p class="card-text">
+								<b style="color:black">Name: </b> OYO 7495 Manikonda<br>
+								<b style="color:black">Distance: </b> 13km
 							</p>
 						</div>
 					</div>
