super scripted th in imp dates

--- a/importantdates.html
+++ b/importantdates.html
@@ -135,15 +135,15 @@
                     <tbody>
                         <tr>
                             <td style="text-align: left;">Paper submission last date</td>
-                            <td style="text-align: left;">30th March 2020</td right;>
+                            <td style="text-align: left;">30<sup style="color: black;">th</sup> March 2020</td right;>
                         </tr>
                         <tr>
                             <td style="text-align: left;">Registration fee submission</td style="text-align: right;">
-                            <td style="text-align: left;">30th April 2020</td style="text-align: right;">
+                            <td style="text-align: left;">30<sup style="color: black;">th</sup> April 2020</td style="text-align: right;">
                         </tr>
                         <tr>
                             <td style="text-align: left;">Conference dates</td style="text-align: right;">
-                            <td style="text-align: left;">5th, 6th June 2020</td style="text-align: right;">
+                            <td style="text-align: left;">5<sup style="color: black;">th</sup>, 6<sup style="color: black;">th</sup> June 2020</td style="text-align: right;">
                         </tr>
                     </tbody>
                 </table>
