updated spacious-stay image and 'event breifing to be updated'

--- a/accommodation.html
+++ b/accommodation.html
@@ -172,7 +172,7 @@
 					<div class="card mb-4 shadow-sm">
 						<a href="https://www.google.com/maps/place/OYO+33412+Spacious+Stay+Qutub+Shahi+Tomb/@17.395867,78.3809653,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb95bf33c66ab1:0x5ae5670738c30e3e!5m2!4m1!1i2!8m2!3d17.395867!4d78.383154"
 							target="_blank">
-							<img class="card-img-top" src="img/Accomodation/spacious-stay.jpg"
+							<img class="card-img-top" src="img/Accomodation/spacious-stay.jpeg"
 								alt="OYO 33412 Spacious Stay " width="200" height="200" />
 						</a>
 						<div class="card-body">
