--- a/schedule.html
+++ b/schedule.html
@@ -114,7 +114,7 @@
 		<div class="container">
 			<div class="main_title">
 				<h2>Event Schedule</h2>
-				<p>Event briefing</p>
+				<p>Event briefing to be updated soon</p>
 			</div>
 			<div class="event_schedule_inner">
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
