send the paper with in...

--- a/register.html
+++ b/register.html
@@ -154,7 +154,7 @@
                     <div class="col-lg-6">
                         <div class="event_text">
                             <h3> Paper Submission Deadline</h3>
-                            <p>Send the paper within the </p>
+                            <p>Send the paper within </p>
                         </div>
                     </div>
                     <div class="col-lg-6">
