changed home page acc to doc

--- a/index.html
+++ b/index.html
@@ -117,14 +117,15 @@
 					<h2>4<sup><b style="color:white; text-transform: lowercase;">th</b></sup> International Conference on Smart Computing & Informatics (SCI-2020)</h2>
 					<div class="row" style="text-align: center;">
 						<div class="col">
-							<img src="img/springer.png" style="width:50%; height:auto"/>
-						</div>
-						<div class="col">
 							<img src="img/csi.jpg" style="width:20%; height:auto"/>
 						</div>
+						<div class="col">
+							<img src="img/springer.png" style="width:50%; height:auto"/>
+						</div>
+						
 					</div>
 					<h4>5-6, June, 2020</h4>
-					<p>Organized by <h3 style="padding:0px;"><span style="margin-bottom: 20px;">Department of Computer Science Engineering</span> <br /><span style="margin-bottom:20px;">Vasavi College of Engineering (Autonomous) </span><br />Hyderabad, Telangana, India</h3>
+					<p>Organized by <h3 style="padding:0px;"><span style="margin-bottom: 20px;">Department of Computer Science and Engineering</span> <br /><span style="margin-bottom:20px;">Vasavi College of Engineering (Autonomous) </span><br />Hyderabad, Telangana, India</h3>
 					</p>
 				</div>
 			</div>
@@ -177,7 +178,7 @@
 			<div class="welcome_inner row">
 				<div class="col-lg-5">
 					<div class="welcome_img">
-						<img class="img-fluid" src="img/banner/welcomeBanner.jpg" style="padding-top:30px;height:340px; width: auto;" alt="">
+						<img class="img-fluid" src="img/banner/welcomeBanner.jpg" style="padding-top:50px;height:360px; width: auto;" alt="">
 					</div>
 				</div>
 				<div class="col-lg-6 offset-lg-1">
@@ -191,7 +192,8 @@
 							that may be applied to provide realistic solutions to varied problems in society, environment
 							and industries. The scope is also extended towards deployment of emerging computational and knowledge
 							transfer approaches, optimizing solutions in varied disciplines of science, technology and healthcare.
-							The conference proceeding aims publication of quality and unpublished work pertaining to specific topics of interest as mentioned in CFP.
+							The conference proceeding aims publication of quality and unpublished work pertaining to specific topics.
+
 						</p>
 					</div>
 				</div>
