changed about us accto doc

--- a/about-us.html
+++ b/about-us.html
@@ -69,7 +69,8 @@
 							</li>-->
 							<li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
+							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a>
+							</li>
 							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
@@ -130,13 +131,27 @@
 		<div class="container">
 			<h3 class="text-heading title_color">PROFILE OF THE INSTITUTE</h3>
 			<p class="sample-text">
-				Vasavi College of Engineering (VCE) was founded in 1981 by Vasavi Academy of Education. With dedicated
-				efforts for three  decades, VCE has emerged as a reputed center of learning in Engineering, and
-				currently offering 6 UG and 5 PG programs. It is  affiliated to Osmania University and recognized by
-				AICTE. The stakeholders have rated VCE as one of the TOP two institutes in the state. The College has
-				signed MoUs with prominent IT-related organizations like Pega, Progress Software, Infosys etc. VCE
-				Incubation Center was set-up to provide a platform to Start-ups and prospective entrepreneurs to convert
-				their innovative ideas into commercially viable products.
+				Founded in 1981 by Vasavi Academy of Education, Vasavi College of Engineering represents a rich
+				tradition of excellence in technology-based education. A premier-league institution among the affiliates
+				of Osmania University, Vasavi College of Engineering owes its vision to Sri Pendekanti Venkata Subbaiah,
+				a veteran statesman of Independent India.<br /><br />
+				Vasavi College of Engineering, in its 38 years of existence, is a reputed institution in the State of
+				Telangana. The college in its pursuit for quality in technical education has earned 3rd ranking in the
+				State and 32nd in the country (source: Hindustan Times on 24th June 2009).
+				The college offers six UG (Civil, Mechanical, ECE, CSE, EEE and IT) with total sanctioned intake of 780
+				and 6 PG programmes [ME (ES & VLSI); ME (CE & SP); ME (ADM); ME(PS & PE); M.Tech (CSE)] and MCA with
+				total sanctioned intake of 156].<br /><br />
+				Located in the sylvan suburbs of Ibrahimbagh in Hyderabad, Vasavi College of Engineering presents a
+				picturesque view flanked by the glorious Golconda Fort. Situated over a sprawling 13.6 acre campus with
+				lush lawns, a beautiful landscape, aesthetic architecture and avant-garde infrastructure, the College
+				epitomizes an exemplary setting for higher learning.
+				With dedicated efforts of over three decades, Vasavi College of Engineering has emerged into a centre of
+				excellence in engineering education. Building purposive partnerships with the industry, bolstering its
+				wherewithal continually and evolving innovative programmes consistent with changing times, Vasavi
+				College of Engineering strives to maintain its pre-eminent position.<br /><br />
+				The college has been granted autonomy by the University Grants Commission, New Delhi and Osmania
+				University, Hyderabad for all the programs for a period of six years with effect from 2014-15.
+
 			</p>
 		</div>
 	</section>
@@ -228,7 +243,7 @@
 				<div class="col-lg-1"></div>
 			</div>-->
 			<div class="footer-area">
-				<p style="text-align: center; padding-top:45px;" >
+				<p style="text-align: center; padding-top:45px;">
 					Organized by, Vasavi College of Engineering (Autonomous), Hyderabad. Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script>.&nbsp; &nbsp;
 					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
